--- a/package.json
+++ b/package.json
@@ -32,34 +32,46 @@
 		"ellipsis"
 	],
 	"dependencies": {
-		"shave": "^2.1.3"
+		"shave": "^2.5.2"
 	},
 	"devDependencies": {
-		"ava": "^0.25.0",
-		"babel-preset-env": "^1.6.0",
-		"puppeteer": "^1.3.0",
-		"rollup": "^0.57.1",
-		"rollup-plugin-babel": "^3.0.3",
-		"rollup-plugin-commonjs": "^9.1.0",
-		"rollup-plugin-node-resolve": "^3.0.0",
-		"xo": "^0.20.3"
+		"@babel/preset-env": "^7.2.3",
+		"ava": "^1.0.1",
+		"puppeteer": "^1.11.0",
+		"rollup": "^0.68.1",
+		"rollup-plugin-babel": "^4.1.0",
+		"rollup-plugin-commonjs": "^9.2.0",
+		"rollup-plugin-node-resolve": "^4.0.0",
+		"xo": "^0.23.0"
 	},
 	"babel": {
 		"presets": [
 			[
-				"env",
+				"@babel/preset-env",
 				{
 					"targets": {
 						"browsers": [
 							"last 2 versions",
 							"> 1%"
 						]
-					},
-					"modules": false,
-					"loose": true
+					}
 				}
 			]
-		]
+		],
+		"env": {
+			"test": {
+				"presets": [
+					[
+						"@babel/preset-env",
+						{
+							"targets": {
+								"node": "current"
+							}
+						}
+					]
+				]
+			}
+		}
 	},
 	"xo": {
 		"envs": [
